--- a/Ecommerce.Admin/appsettings.Development.json
+++ b/Ecommerce.Admin/appsettings.Development.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "ConnectionStrings": {
+        "DbConnection": "Server=. ;Database=Ecommerce;Trusted_Connection=True"
     }
-  }
 }
