--- a/Ecommerce.Admin/client/package.json
+++ b/Ecommerce.Admin/client/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "sweetalert2": "^11.4.4"
   },
   "scripts": {
     "start": "react-scripts start",
