--- a/Ecommerce.Tests/Ecommerce.Tests.csproj
+++ b/Ecommerce.Tests/Ecommerce.Tests.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.5.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="xunit" Version="2.4.1" />
   </ItemGroup>
 
   <ItemGroup>
