--- a/Ecommerce.Admin/appsettings.json
+++ b/Ecommerce.Admin/appsettings.json
@@ -1,10 +1,13 @@
 {
-  "Logging": {
-      "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-      }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
     },
-"AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=. ;Database=Ecommerce;Trusted_Connection=True"
+    }
 }
