--- a/Ecommerce.Admin/client/package.json
+++ b/Ecommerce.Admin/client/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.26.0",
     "firebase": "^9.6.7",
+    "oidc-client": "^1.11.5",
     "qs": "^6.10.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "redux-oidc": "^4.0.0-beta1",
     "sweetalert2": "^11.4.4"
   },
   "scripts": {
